--- a/Nginx/Content/index.html
+++ b/Nginx/Content/index.html
@@ -1,9 +1,10 @@
-
+<!DOCTYPE html>
 <html>
 <body>
 
-ProefTekst - Content
+<h1>My Second Heading</h1>
 
+<p>My Second paragraph.</p>
 
 </body>
 </html>
